# aiur

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
include/: Graph.h  Model.h  Node.h  Proto.h
proto/: onnx-ml.proto3  onnx-ml.proto3.pb.cc  onnx-ml.proto3.pb.h
src/: Graph.cpp  Model.cpp  Node.cpp
src/parser/: AddParser.cpp  AddParser.h  BatchNormParser.cpp  BatchNormParser.h  ConvParser.cpp  ConvParser.h  FlattenParser.cpp  FlattenParser.h  GemmParser.cpp  GemmParser.h  GlobalAveragePoolParser.cpp  GlobalAveragePoolParser.h  MaxPoolParser.cpp  MaxPoolParser.h  NodeParser.cpp  NodeParser.h  OtherParser.cpp  OtherParser.h  ReLuParser.cpp  ReLuParser.h
